@@ -1,3 +1,5 @@
+	* fixed bug in session::delete_files option to remove_torrent
+
 0.15.6 release
 
 	* fixed crash in udp trackers when using SOCKS5 proxy
